--- a/index.html
+++ b/index.html
@@ -1,3 +1,24 @@
-<font size="40pt">
-最初のwebページです
-            </font>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <script>
+
+    </script>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <header>
+        <h1>このページは輪竹のポートフォリオ</h1>
+    </header>
+    <section>
+        <ol>
+            <li>webデザイン1</li>
+            </li>8検1</li>
+        </ol>
+    </section>
+</body>
+
+</html>
